# EvoOM-Guard-m

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: guard-report.md
.github/workflows/: ci.yml  codeql.yml  evoguard-reverify.yml  evoguard-seal.yml  release.yml  scorecard.yml  windows.yml
adversarial/: README.md  corpus.jsonl  legacy-healer-negative-v1.jsonl
audit/v3.7.0/: README.md  REVIEWER_RUNBOOK.md  REVIEW_REPORT_TEMPLATE.md  TEST_MATRIX.md  manifest.json  reproduce.ps1  reproduce.sh
audit/v4.1.0/: README.md  REVIEWER_RUNBOOK.md  REVIEW_REPORT_TEMPLATE.md  TEST_MATRIX.md  manifest.json  reproduce.ps1  reproduce.sh
benchmarks/: README.md  evaluate.py  results.jsonl  run_live.py  sample.jsonl  security_baseline.py
docs/: ADOPTION.md  ARCHITECTURE.md  ARTIFACT_DIGEST_ADMISSION_V2.md  ASSURANCE.md  AUTHENTICATED_PRODUCER_RECEIPT.md  BLACKBOX.md  CASE-STUDY.md  DEPENDENCY_POLICY.md  EVIDENCE_BUNDLES.md  FEATURE_MODE.md  GITHUB_ARTIFACT_ATTESTATIONS.md  GITHUB_ATTESTATION_ADMISSION.md  GUARD.md  JSON_SCHEMA.md  PROJECT_STATUS.md  PROOFS.md  RECORD_VERIFICATION.md  RELEASE_ARTIFACT_ADMISSION_V1.md  RELEASE_GATE_CHECKLIST.md  RELEASE_STATUS.md  REWARD_HACKING_CATALOG.md  SIGNED_VERDICTS.md  START_HERE.md  TRUSTED_FINALIZER.md  TRUSTED_FINALIZER_HARDENING.md  VERIFIER_PACKS.md  VM_ISOLATION.md
docs/adr/: 0001-layered-architecture.md  0002-public-api-compatibility.md  0003-execution-kernel.md  0004-producer-verifier-separation.md  0005-canonical-evidence-primitives.md  0006-error-taxonomy.md  0007-key-access-ordering.md  0008-release-truth.md
docs/architecture/: COMPATIBILITY_MATRIX.md  DEPENDENCY_RULES.md  INVARIANTS.md  MODULE_BOUNDARIES.md  OVERVIEW.md  REFACTOR_PROGRAM.md  STATE_MACHINE.md  TRUST_BOUNDARIES.md
evoom_guard/: __init__.py  blackbox.py  candidate_runner.py  cli.py  contracts.py  evidence.py  evidence_bundle.py  finalizer_derivation.py  github_attestation.py  guard.py  pack_manifest.py  patch_applier.py  record_verifier.py  repo_verifier.py  riskscore.py  runtime_identity.py  scoring.py  signing.py  strict_json.py  workspace.py
evoom_guard/admission/: agent_change.py  release_artifact.py
evoom_guard/execution/: __init__.py  process.py
evoom_guard/isolation/: __init__.py  docker.py  invocation.py
evoom_guard/schemas/: artifact-binding-1.schema.json  artifact-digest-binding-2.schema.json  evidence-context-1.schema.json  evidence-manifest-1.schema.json  github-attestation-receipt-1.schema.json  release-artifact-admission-1.schema.json  verdict-record-1.11.schema.json
evoom_guard/verifiers/: fidelity.py  harness_policy.py  junit_oracle.py  repo_verifier.py
examples/: evoguard.yml
examples/blackbox-http/: README.md
examples/blackbox-http/pack/: pack.json  test_http_protocol.py
examples/blackbox-http/patches/: cheat.txt  honest.txt
examples/blackbox-http/sample_repo/app/: __init__.py  __main__.py
examples/blackbox-http/sample_repo/tests/: test_add.py
examples/blackbox-pack/: pack.json  test_pack_protocol.py
examples/case-study-charset-normalizer/: README.md
examples/case-study-charset-normalizer/verdicts/: 1-honest-fix.json  2-test-tamper.json  3-fake-fix.json
examples/trusted-finalizer/: README.md  reverify.yml  seal.yml
ops/: build_pyz.py
ops/ci/docker/: evoguard-e2e-pytest.Dockerfile
requirements/: ci.in  docker-pytest.in
tests/: candidate_runner_characterization_harness.py  test_action_comment_upsert.py  test_action_security.py  test_adversarial_corpus.py  test_adversarial_integrity_boundaries.py  test_adversarial_setup_outputs.py  test_adversarial_toctou.py  test_allowlist.py  test_assurance_policy.py  test_baseline_evidence.py  test_benchmark.py  test_blackbox.py  test_blackbox_docker_e2e.py  test_blackbox_judge_reader_start.py  test_candidate_runner.py  test_candidate_runner_characterization.py  test_cli.py  test_copy_fidelity.py  test_dependency_lock_policy.py  test_diff_coverage_trust.py  test_docker_containment.py  test_docker_isolation.py  test_docs_version.py  test_evidence.py  test_evidence_bundle.py  test_evidence_cli.py  test_execution_process.py  test_execution_process_reader_start.py  test_finalizer_derivation.py  test_finalizer_git_executable_pin.py  test_finalizer_workflow_security.py  test_github_attestation.py  test_guard.py  test_guard_internals.py  test_http_blackbox_example.py  test_isolation_docker.py  test_isolation_invocation.py  test_json_contract.py  test_legacy_healer_negative_registry.py  test_marker_collision.py  (+24 more)
tests/architecture/: import_boundary_baseline.json  test_import_boundaries.py
tests/baseline/schema/: release-ledger-v1.schema.json
tests/baseline/v4.0.1/: BASELINE_MANIFEST.json  README.md  SHA256SUMS_v4.0.1.txt
tests/baseline/v4.0.1/artifacts/: baseline-sign-pub.pem  record-pass-repo-signed.json  record-pass-repo-signed.json.sig
tests/baseline/v4.0.1/commands/: cli_help.txt  init_help.txt  version.txt
tests/baseline/v4.0.1/evidence/: record-fail-repo.json  record-pass-repo.json  record-rejected-harness.json  report-fail-repo.md  report-pass-repo.md  report-rejected-harness.md  sarif-fail-repo.json  sarif-pass-repo.json  sarif-rejected-harness.json
tests/baseline/v4.0.1/packs/: pack-doctor-report.json
tests/baseline/v4.0.1/pyz/: evo-guard.pyz
tests/baseline/v4.0.2/: README.md  RELEASE_LEDGER.json  SHA256SUMS
tests/baseline/v4.0.2/pyz/: evo-guard.pyz
tests/baseline/v4.2.0/: README.md  RELEASE_LEDGER.json  SHA256SUMS
tests/baseline/v4.2.0/pyz/: evo-guard.pyz
tests/fixtures/refactor-safety/: candidate-runner-v1.json
tools/ci/: capture_candidate_runner_characterization.py  run_security_mutation_gate.py
tools/ci-vitest/: package-lock.json  package.json
