# ─────────────────────────────────────────────────────────────────────────────
# Copyright (c) 2026 Mana Alharbi (مانع الحربي). All rights reserved.
# Source-available — see LICENSE for permitted use.
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "evoom-guard"
description = "Independent, evidence-bound verification for untrusted software changes, with AI-generated patches as the primary use case."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mana Alharbi (مانع الحربي)" }]
maintainers = [{ name = "Mana Alharbi (مانع الحربي)" }]
keywords = ["ai", "agents", "ci", "testing", "reward-hacking", "patch", "verification"]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    # Source-available (no redistribution): never publish to a public index.
    "Private :: Do Not Upload",
]
# The whole gate is stdlib-only — nothing to install beyond Python and git/patch.
dependencies = []
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/EvoRiseKsa/EvoOM-Guard-m"
Issues = "https://github.com/EvoRiseKsa/EvoOM-Guard-m/issues"

[project.scripts]
evo-guard = "evoom_guard.cli:main"

[project.optional-dependencies]
# Ed25519 verdict/evidence signing (keygen, --sign-key, verify-verdict/bundle).
sign = ["cryptography>=41"]
# Changed-line coverage evidence (evo-guard guard --diff-coverage).
cov = ["coverage>=7"]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "coverage>=7",
    "cryptography>=41",
    "jsonschema>=4.23",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
evoom_guard = ["schemas/*.json"]

[tool.setuptools.packages.find]
include = ["evoom_guard*"]

[tool.setuptools.dynamic]
version = { attr = "evoom_guard.__version__" }

# ───────────────────────────── tooling ──────────────────────────────────────
[tool.pytest.ini_options]
# The repo's OWN suite is tests/. examples/ holds black-box verifier packs meant
# to run under the Guard judge (with EVOGUARD_* env + a candidate target), not as
# part of this repo's suite — so `python -m pytest -q` collects only tests/.
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["evoom_guard"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# The 'sign'/'cov' extras are optional: type-checking must pass without them.
module = ["cryptography.*", "coverage", "coverage.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["evoom_guard"]
branch = false

[tool.coverage.report]
fail_under = 80
